2015-10-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (ipv6_is_enabled): New function.

	* base/openvas_networking.h: Add function prototype.

2015-10-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* osp/osp.c (osp_get_scan): Fix return values. Add function
	documentation.
	(osp_stop_scan): New function.
	(osp_start_scan): Add scan_id parameter. Remove result parameter.

	* osp/osp.h: Add and modify function prototypes.

2015-10-05  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* omp/omp.c (omp_create_lsc_credential, omp_create_lsc_credential_key)
	(omp_create_lsc_credential_ext, omp_delete_lsc_credential_ext): Change
	OMP commands "create_lsc_credential" and "delete_lsc_credential"
	to "create_credential" and "delete_credential".

2015-09-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/exec.c (exec_nasl_script): Exit forked processes instead of
	returning.

2015-09-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvticache.c (nvticache_reset): Null check cache_kb instead of
	asserting, as this function may be called from openvas-nasl.

2015-08-31  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_socket.c (get_udp_data): Create udp_data hash table if not
	found.

2015-08-28  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (openvas_ssh_pkcs8_decrypt)
	(openvas_ssh_public_from_private): Move functions to misc/openvas_ssh.c

	* base/openvas_networking.h: Remove functions prototypes.

	* misc/CMakeLists.txt: Add openvas_ssh.h and openvas_ssh.c.

	* nasl/nasl_ssh.c: Add include.

	* misc/openvas_ssh.c, misc/openvas_ssh.h: New files.

2015-08-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* doc/openvas-nasl.1: Update documentation.

	* misc/prefs.c (prefs_init): Move up, make function static.
	(preferences_get, prefs_get, prefs_get_bool, prefs_set): Initialize
	preferences if not done already.

	* misc/prefs.h: Remove function prototype.
