@@ -1,3 +1,9 @@
+2015-10-07  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* misc/network.c (read_stream_connection_unbuffered): Fix erroneous
+	gnutls_record_recv() return value handling, which caused early return
+	even when not all data was received.
+
 2015-10-06  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* base/openvas_networking.c (ipv6_is_enabled): New function.
